// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render Text with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0 Text__StyledText-wkh56f-0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="400"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c1 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

<div>
  <p
    class="c0 c1"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "body" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c1 {
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 3;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

<div>
  <p
    class="c0 c1"
    color="hsla(0, 0%, 100%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;

exports[`<Text /> should render Text with variant "caption" 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

<div>
  <p
    class="c0 Text__StyledText-wkh56f-0"
    color="hsla(217, 56%, 17%, 1)"
    font-family="Lato, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\""
    font-size="0.875rem"
    font-style="normal"
    font-weight="700"
  >
    Displaying some text
  </p>
</div>
`;
